--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: larger;
-    background-color: grey;
+    background-color: beige;
 }
 
 section{
